CSS: Fix wrap policy of Archive list on footer

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -881,19 +881,18 @@ footer.page-footer {
 
 		ul.monthes {
 			display: inline;
-			@media screen and (max-width: $breakpoint){
+			@media screen and (max-width: $body_width){
 				display: block;
 				margin-bottom: .8em;
-				@include clearfix;
 			}
 
 			li {
 				display: inline;
-				@media screen and (max-width: $breakpoint){
-					display: block;
-					font-size: 95%;
-					float: left;
-					width: 16%;
+				br {
+					display: none;
+					@media screen and (max-width: $body_width){
+						display: inline;
+					}
 				}
 			}
 		}
